@@ -3,6 +3,7 @@ package com.bdi.projectbdigroup5.service;
 import com.bdi.projectbdigroup5.dto.ArticleRequestBodyDto;
 import com.bdi.projectbdigroup5.exception.NombrePassFestivalInsuffisantException;
 import com.bdi.projectbdigroup5.exception.NombrePlaceCovoiturageInsuffisantException;
+import com.bdi.projectbdigroup5.exception.NotFoundException;
 import com.bdi.projectbdigroup5.exception.QuantiteZeroException;
 import com.bdi.projectbdigroup5.model.Article;
 import com.bdi.projectbdigroup5.model.PointPassageCovoiturage;
@@ -12,7 +13,6 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -25,14 +25,11 @@ public class ArticleService {
         PointPassageCovoiturage pointPassageCovoiturage = pointPassageCovoiturageRepository
                 .findById(requestBodyDto
                         .getIdPointPassage())
-                .orElseThrow(() -> new RuntimeException("Point passage covoiturage non trouvé"));
+                .orElseThrow(() -> new NotFoundException("Point passage not found"));
 
-        int nbPlace = pointPassageCovoiturage.getOffreCovoiturage().getNombrePlaces();
-        int nbPass = pointPassageCovoiturage.getOffreCovoiturage().getFestival().getNombrePass();
+        int nbPlace = getNbPlace(pointPassageCovoiturage);
+        int nbPass = getNbPass(pointPassageCovoiturage);
 
-        if(nbPlace == 0 || nbPass == 0) {
-            throw new QuantiteZeroException(pointPassageCovoiturage.getId());
-        }
 
         if(nbPlace < requestBodyDto.getQuantite()) {
             throw new NombrePlaceCovoiturageInsuffisantException(
@@ -55,7 +52,32 @@ public class ArticleService {
         return this.articleRepository.save(newArticle);
     }
 
-    public Iterable<Article> saveAllArticle(List<ArticleRequestBodyDto> articleRequestBodyDtos){
-        return articleRequestBodyDtos.stream().map(this::saveArticle).collect(Collectors.toList());
+    public Iterable<Article> saveAllArticle(List<ArticleRequestBodyDto> articleRequestBodyDtos) {
+        return articleRequestBodyDtos.stream().map(this::saveArticle).toList();
+    }
+
+    private static int getNbPlace(PointPassageCovoiturage pointPassageCovoiturage) {
+        int nbPlace = pointPassageCovoiturage.getOffreCovoiturage().getNombrePlaces();
+        if(nbPlace == 0) {
+            throw new QuantiteZeroException(
+                    pointPassageCovoiturage.getOffreCovoiturage().getId(),
+                    "OffreCovoiturage"
+            );
+        }
+        return nbPlace;
+
+    }
+
+    private static int getNbPass(PointPassageCovoiturage pointPassageCovoiturage) {
+        int nbPass = pointPassageCovoiturage.getOffreCovoiturage().getFestival().getNombrePass();
+
+        if(nbPass == 0) {
+            throw new QuantiteZeroException(
+                    pointPassageCovoiturage.getOffreCovoiturage().getFestival().getId(),
+                    "Festival"
+            );
+        }
+
+        return nbPass;
     }
 }
